--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
 .mapafrica{
     width:40%;
     height:700px;
-background-color:rgb(102, 144, 207);
+background-color:rgb(227, 237, 252);
 
 }
 
@@ -76,7 +76,7 @@ svg#svg2 {
 .names1{
     width:30%;
   
-    background-color:rgb(233, 84, 84)
+    background-color:rgb(247, 235, 235)
 }
 .names1 li a{
     text-decoration:none;
@@ -94,15 +94,17 @@ svg#svg2 {
 }
 .names1 li a:hover{
     text-decoration:underline;
-    color:rgb(255, 255, 255);
+    color:rgb(4, 66, 30);
     list-style: none;
     font-size:18px;
+    font-weight: bold;
 }
 .names2 li a:hover{
     text-decoration:underline;
-    color:rgb(255, 255, 255);
+    color:rgb(8, 58, 2);
     list-style: none;
     font-size:18px;
+    font-weight: bold;
 }
 .names1 li {
     text-decoration:none;
@@ -119,7 +121,7 @@ svg#svg2 {
 .names2{
     width:30%;
    
-    background-color:rgb(94, 20, 109)
+    background-color:rgb(251, 238, 253)
 }
 .final{
     width:100%;
@@ -129,23 +131,25 @@ svg#svg2 {
 .aboutt{
     width:100%;
     height:400px;
-    background-color:rgb(124, 238, 232);
+    background-color:rgb(255, 255, 255);
     margin:0 auto;
 }
 .nameflag{
-    background-color:rgb(248, 207, 207);
+    background-color:rgb(250, 250, 250);
     height:100px;
 }
-.nameflag ul li{
-   display:inline-block
+.nameflag table tr{
+    width:700px;
+    height:40px;
 }
+
 #colone1{
     width:50%;
-    background-color:red;
+    background-color:rgb(255, 255, 255);
     height:400px;
 }
 #colone2{
     width:50%;
     height:400px;
-    background-color:rgb(30, 187, 77);
+    background-color:rgb(255, 255, 255);
 }
