--- a/style.css
+++ b/style.css
@@ -12,34 +12,33 @@ body{
 }
 .navbar1 ul li{
     display:inline-block;
-    width:20%;
+    width:33.4%;
     height:50px;
     text-align:center;
-    font-weight: bold;
+   background-color:#333;
     margin-right:-5px;
-    padding:0px;
-
-
-    
-  
+    padding:0px; 
 }
+
 
 .navbar1 ul li a{
     text-decoration:none;
-    color:black;
+    color:rgb(255, 253, 253);
     list-style: none;
     font-size:18px;
-    font-weight:bold
+  
     
 }
-.navbar1 ul li a:hover{
+.navbar1 ul li:hover{
     text-decoration:underline;
     color:rgb(255, 255, 255);
     list-style: none;
-    font-size:20px;
+    background-color:rgb(12, 82, 12);
+    
+ 
    
 }
-}
+
 .maparea {
    width:100%;
  
@@ -55,14 +54,14 @@ body{
 }
 .mapafrica{
     width:40%;
-    height:700px;
+   
 background-color:rgb(227, 237, 252);
 
 }
 
 .carte{
     width:90%;
-    height:70%;
+  
     margin:0px;
     margin:0px
 }
@@ -76,7 +75,7 @@ svg#svg2 {
 .names1{
     width:30%;
   
-    background-color:rgb(247, 235, 235)
+    background-color:rgb(247, 252, 246)
 }
 .names1 li a{
     text-decoration:none;
@@ -121,7 +120,7 @@ svg#svg2 {
 .names2{
     width:30%;
    
-    background-color:rgb(251, 238, 253)
+    background-color:rgb(253, 249, 238)
 }
 .final{
     width:100%;
@@ -131,7 +130,7 @@ svg#svg2 {
 .aboutt{
     width:100%;
     height:400px;
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(250, 250, 250);
     margin:0 auto;
 }
 .nameflag{
@@ -144,12 +143,25 @@ svg#svg2 {
 }
 
 #colone1{
-    width:50%;
+    width:30%;
     background-color:rgb(255, 255, 255);
-    height:400px;
+    height:;
 }
 #colone2{
-    width:50%;
-    height:400px;
+    width:60%;
+    height:;
     background-color:rgb(255, 255, 255);
+}
+#firsttext{
+    width:80%;
+   
+    font-size:18px;
+    color:rgb(8, 8, 8);
+    text-align:left;
+    margin-top:15px;
+    border-left:10px solid rgb(29, 31, 29);
+}
+.img-countries:hover{
+    border:rgb(4, 109, 20) 4px solid;
+     cursor: pointer;
 }
