--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 body{
     padding:0px;
     margin:0px;
+    border-left:15px solid #333;
+    border-right:15px solid #333;
 
 }
 
@@ -43,38 +45,39 @@ body{
   margin:0 auto;
 }
 
+
 .maparea {
    width:100%;
- 
+  
    background-color:rgb(248, 255, 248);
  
 }
+
 #div1{
        width:100%;
        margin:0 auto;
 }
-.maparea div{
-    display:inline-flex;
-}
+
 .mapafrica{
     width:40%;
    
 background-color:rgb(227, 237, 252);
 
 }
-
 .carte{
-    width:90%;
+    
   
     margin:0px;
     margin:0px
 }
 
 svg{
-    width:470px;
-    height:600px;
-    margin-left:-45px;
-    margin-top:-60px;
+   margin-left:-40px;
+   width:400px;
+   margin-top:-30px;
+
+   
+   
    
 }
 
@@ -185,7 +188,7 @@ margin-top:20px;
 }
 .nameall ul li a{
     color:white;
-    font-size:18px;
+    font-size:15px;
 }
 .nameall ul li:hover{
     background-color:rgb(40, 141, 0);
