--- a/style.css
+++ b/style.css
@@ -219,26 +219,37 @@ margin-top:20px;
 
 #possibilities{
     background-color:#efefef;
-    padding:60px 0;
+    padding:30px 0;
+    margin-top:30px;
     
   }
+  #possibilities article{
+    width:460px;
+    height:270px;
+    
+    border-radius:5px;
+    
+
+}
   .wrapper{
-    width:1000px;
-    margin: 0 auto;
-    padding:0px 10px ;
+    width:80%;
+    margin:0 auto;
+  
 }
 .overlay{
     background-color: rgba(235, 235, 235, 0.7);
-    height:90%;
-    width:180px;
-    padding:20px;
+    height:100%;
+    width:50%;
+    padding:10px;
     border-radius:10px 0 0 10px;
     margin-right:24px;
     position: relative;
 }
 .classp{
-    padding-top:100px;
+    padding-top:10px;
 }
 .clear{
     clear:both;
 }
+
+
