--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 body{
     padding:0px;
     margin:0px;
-    border-left:15px solid #333;
-    border-right:15px solid #333;
+    border-left:10px solid #333;
+    border-right:10px solid #333;
+   
 
 }
 
@@ -15,11 +16,10 @@ body{
 }
 .navbar1 ul li{
     display:inline-block;
-    width:33.4%;
+    width:47%;
     height:50px;
     text-align:center;
-   background-color:#333;
-    margin-right:-5px;
+ 
     padding:0px; 
 }
 
@@ -28,18 +28,12 @@ body{
     text-decoration:none;
     color:rgb(255, 253, 253);
     list-style: none;
-    font-size:18px;
+    font-size:20px;
   
     
 }
 .navbar1 ul li:hover{
-    text-decoration:underline;
-    color:rgb(255, 255, 255);
-    list-style: none;
-    background-color:rgb(0, 165, 0);
-    
- 
-   
+    background-color:rgb(139, 243, 139);
 }
 #new{
   margin:0 auto;
@@ -49,7 +43,7 @@ body{
 .maparea {
    width:100%;
   
-   background-color:rgb(248, 255, 248);
+   background-color:rgb(242, 248, 238);
  
 }
 
@@ -179,7 +173,7 @@ svg{
 .nameall ul li{
     height:auto;
 margin-top:20px;
-    background-color:#333;
+    background-color:#444;
     padding:5px;
     margin:2px;
     list-style: none;
@@ -218,21 +212,24 @@ margin-top:20px;
 }
 
 #possibilities{
-    background-color:#efefef;
-    padding:30px 0;
-    margin-top:30px;
+    background-color:#ffffff;
+    padding:20px 0;
+   
+    width:94%;
+    margin:0 auto;
     
   }
   #possibilities article{
-    width:460px;
-    height:270px;
-    
+    width:100%;
+    height:260px;
+    margin:0 auto;
     border-radius:5px;
+    
     
 
 }
   .wrapper{
-    width:80%;
+    width:100%;
     margin:0 auto;
   
 }
@@ -243,13 +240,28 @@ margin-top:20px;
     padding:10px;
     border-radius:10px 0 0 10px;
     margin-right:24px;
-    position: relative;
+   
 }
 .classp{
     padding-top:10px;
+    font-size:14px;
+    color:black;
+    font-weight:bold;
 }
 .clear{
     clear:both;
 }
-
+#article1{
+    
+}
+footer{
+    background-color:#444;
+ 
+    text-align:center;
+    font-size:12px;
+    color:white;
+}
+.copyright{
+    padding:15px;
+}
 
