--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ body{
 
 }
 
-
+.navbar1{
+    width:100%;
+    background-color:blue
+}
 .navbar1 ul{
 
     padding:0px;
@@ -16,13 +19,15 @@ body{
 }
 .navbar1 ul li{
     display:inline-block;
-    width:47%;
+    width:24%;
     height:50px;
     text-align:center;
  
     padding:0px; 
 }
-
+#td1 li:hover{
+    background-color:blue
+}
 
 .navbar1 ul li a{
     text-decoration:none;
@@ -37,6 +42,9 @@ body{
 }
 #new{
   margin:0 auto;
+}
+table tr td li:hover{
+    background-color:black
 }
 
 
