--- a/style.css
+++ b/style.css
@@ -120,10 +120,12 @@ svg{
     background-color:green;
 }
 .aboutt{
-    width:100%;
-    height:400px;
+    width:90%;
+    height:auto;
     background-color:rgb(250, 250, 250);
     margin:0 auto;
+    border-left:10px solid rgb(240, 240, 240);
+    border-right:10px solid rgb(218, 218, 218);
 }
 .nameflag{
     background-color:rgb(250, 250, 250);
@@ -164,10 +166,12 @@ margin-top:20px;
     padding:5px;
     margin:2px;
     list-style: none;
-    display:inline-block;
+    display:inline-block;}
   
-
+.nameall2 ul li{
+    background-color:#444;
 }
+
 .nameall ul li a{
     color:white;
     font-size:15px;
@@ -191,10 +195,11 @@ margin-top:20px;
 }
 
 .headtr{
-    background-color:rgb(144, 247, 150);
+    background-color:#444;
     font-size:17px;
     text-align:center;
     font-weight:bold;
+    color:white;
     
 }
 
