--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ margin-top:20px;
     list-style: none;
     display:inline-block;}
   
-.nameall2 ul li{
+.nameall ul li{
     background-color:#444;
 }
 
