--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 body{
     padding:0px;
     margin:0px;
-    border-left:10px solid #333;
-    border-right:10px solid #333;
+   
+    
    
 
 }
@@ -275,7 +275,7 @@ footer{
     height:500px;
     background-image:url('images/b-g.jpg');
     background-size:100% 100%;
-    background-attachment:fixed;
+    background-attachment:fix;
     margin-top:-10px;
 }
 
@@ -289,11 +289,15 @@ footer{
       font-family: Helvetica, arial, sans-serif;
     
   }
+  header.clearfix{
+      position: fixe
+  }
    
 section.clearfix{
    background-color:rgb(244, 248, 244);
    color:#333;
-   height:120px
+   height:120px;
+   
   }
   
   .clearfix:before,
