--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 body{
     padding:0px;
     margin:0px;
-   
-    
+    border-left:10px solid #333;
+    border-right:10px solid #333;
    
 
 }
@@ -147,13 +147,14 @@ svg{
     
 }
 #firsttext{
-    width:80%;
+    width:100%;
    
     font-size:16px;
     color:rgb(8, 8, 8);
-    text-align:left;
+    text-align:center;
     margin-top:15px;
     border-left:10px solid rgb(255, 255, 255);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .img-countries:hover{
     border:rgb(4, 109, 20) 4px solid;
@@ -290,7 +291,7 @@ footer{
     
   }
   header.clearfix{
-      position: fixe
+    
   }
    
 section.clearfix{
@@ -448,6 +449,10 @@ section.clearfix{
           margin-right: 0;
           clear: right;
       }
+      section.clearfix{
+        height:200px;
+       
+    }
   }
   
   /* Small monitor */
@@ -478,6 +483,7 @@ section.clearfix{
       }
       section.clearfix{
         height:200px;
+        margin:30px auto;
     }
   }
    
@@ -586,9 +592,10 @@ section.clearfix{
       }
       section.clearfix{
           height:200px;
+          margin-top:30px;
       }
       .bigBg{
-          height;:270px
+          height:270px;
       }
   }
 
