--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ section.clearfix{
       }
       section.clearfix{
         height:200px;
-        margin:30px auto;
+       
     }
     .aboutt{
         width:100%;
@@ -600,6 +600,9 @@ section.clearfix{
           width: 100%;
           text-align: center;
       }
+      .learn-more{
+          margin-top:25px;
+      }
       .section-left,
       .section-right{
           width: 100%;
@@ -630,7 +633,7 @@ section.clearfix{
       }
       section.clearfix{
           height:200px;
-          margin-top:30px;
+          
       }
       .bigBg{
           height:270px;
