--- a/style.css
+++ b/style.css
@@ -290,9 +290,7 @@ footer{
       font-family: Helvetica, arial, sans-serif;
     
   }
-  header.clearfix{
-    
-  }
+  
    
 section.clearfix{
    background-color:rgb(244, 248, 244);
@@ -385,7 +383,8 @@ section.clearfix{
       color: black;
   }
   .hidden-desktop{
-      display: none;
+      display: non;
+      color:white;
   }
  
   .section-left,
@@ -433,7 +432,11 @@ section.clearfix{
   .learn-more:active{
       box-shadow: inset 0 2px 0 rgba(0,0,0,.8);
   }
-  
+  @media (min-width: 980px){
+  header.clearfix{
+    height:70px;
+  }
+}
   /* Portrait tablet to landscape and desktop */
   @media (min-width: 768px) and (max-width: 979px) {
       .box{
@@ -630,6 +633,7 @@ section.clearfix{
       }
       .hidden-desktop{
           display: block;
+          color:red
       }
       section.clearfix{
           height:200px;
