--- a/style.css
+++ b/style.css
@@ -442,6 +442,7 @@ section.clearfix{
       .box{
           width: 49%;
           margin-bottom: 5%;
+          margin-top:30px
       }
   
       ul li:nth-child(3) .box{
