--- a/style.css
+++ b/style.css
@@ -771,3 +771,44 @@ color: #f5f5f5 !important;
 border-right: 1px solid grey;
 height: 100%;
 }
+
+
+
+
+
+
+
+
+.ara2{
+    width:100%;
+    height:300px;
+    background-image:url('images/tech02.jpg');
+    
+}
+
+
+
+
+
+
+
+
+
+
+.accordion-toggle:hover {
+    text-decoration: none;
+  }
+
+  .faqq{
+      width:100%;
+      height:70px;
+      padding:10px;
+      background-color:#444;
+      color:rgb(255, 255, 255);
+      font-size:20px;
+     
+      
+      
+  }
+
+
