--- a/style.css
+++ b/style.css
@@ -550,6 +550,7 @@ section.clearfix{
       }
       section.clearfix{
         height:200px;
+        margin-bottom:-20px;
     }
     .bigBg{
         height:270px
@@ -604,6 +605,9 @@ section.clearfix{
           width: 100%;
           text-align: center;
       }
+      header{
+          height:65px;
+      }
       .learn-more{
           margin-top:25px;
       }
@@ -639,6 +643,7 @@ section.clearfix{
       }
       section.clearfix{
           height:200px;
+          margin-bottom:-50px;
           
       }
       .bigBg{
@@ -783,6 +788,7 @@ height: 100%;
     width:100%;
     height:300px;
     background-image:url('images/tech02.jpg');
+    background-position:center;
     
 }
 
