--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
-
-body{
-
+html {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+ }
  
-   
-
-}
+ body {
+    margin: 0;
+    padding:0px;
+    min-height: 100%;
+    width: 100%;
+ }
+ 
 
 .navbar1{
     width:110%;
@@ -604,7 +610,7 @@ section.clearfix{
           text-align: center;
       }
       header{
-          height:65px;
+          height:auto;
       }
       .learn-more{
           margin-top:25px;
