--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ table tr td li:hover{
 
 
 .maparea {
-   width:100%;
+   width:98%;
+   margin:0 auto;
   
    background-color:rgb(242, 248, 238);
  
@@ -783,6 +784,7 @@ height: 100%;
     width:100%;
     height:300px;
     background-image:url('images/tech02.jpg');
+    background-size: auto;
     background-position:center;
     
 }
