--- a/style.css
+++ b/style.css
@@ -266,10 +266,10 @@ footer{
 }
 .bigBg{
     width:100%;
-    height:500px;
+    height:550px;
     background-image:url('images/b-g.jpg');
     background-size:100% 100%;
-    background-attachment:fix;
+    background-attachment:fixed;
     margin-top:-10px;
 }
 
