--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ footer{
     height:550px;
     background-image:url('images/b-g.jpg');
     background-size:100% 100%;
-    background-attachment:fixed;
+    background-attachment:fixe;
     margin-top:-10px;
 }
 
