--- a/style.css
+++ b/style.css
@@ -264,6 +264,11 @@ footer{
     background-image:url('images/thomasbg.jpeg');
     background-size: 100% 100%;
 }
+.showcases{
+    height:250px;
+    background-color:rgba(56, 55, 55, 0.9);
+    color:rgb(250, 250, 250)
+}
 .bigBg{
     width:100%;
     height:550px;
@@ -271,6 +276,38 @@ footer{
     background-size:100% 100%;
     background-attachment:fixe;
     margin-top:-10px;
+}
+
+.bg_k{
+    background-image:url('images/kultur.jpg');
+    background-size: cover;
+}
+.bg_k1{
+    background-image:url('images/fufu.jpg');
+    background-size: cover;
+}
+.bg_k2{
+    background-image:url('images/schools.png');
+    background-size: cover;
+}
+.btn_k{
+    border:none;
+    width:100%;
+    height:70px;
+    background-color:rgba(255, 255, 255, 0.4);
+   
+    
+    
+}
+.btn_k:hover{
+    border:none;
+    width:100%;
+    height:100%;
+    background-color:rgba(136, 107, 14, 0.8);
+   color:black;
+   font-size:23px;
+    
+    
 }
 
 
@@ -807,4 +844,10 @@ height: 100%;
       
   }
 
+  .separator_line{
+      height: 500px;
+      width: 100%;
+     background-attachment: fixed;
 
+      background-image: url('images/faded_africa.png');
+  }
