--- a/style.css
+++ b/style.css
@@ -260,8 +260,16 @@ footer{
     color:white;
 }
 
-.bg{
-    background-image:url('images/thomasbg.jpeg');
+.bgnelson{
+    background-image:url('images/nelson.jpg');
+    background-size: 100% 100%;
+}
+.bglumumba{
+    background-image:url('images/lumumba.jpg');
+    background-size: 100% 100%;
+}
+.bgsankara{
+    background-image:url('images/sankara.jpg');
     background-size: 100% 100%;
 }
 .showcases{
@@ -295,9 +303,26 @@ footer{
     width:100%;
     height:70px;
     background-color:rgba(255, 255, 255, 0.4);
-   
-    
-    
+  
+}
+.btn_lider{
+    border:none;
+    width:60%;
+    height:50px;
+    background-color:rgba(97, 89, 89, 0.4);
+    margin-left:20px;
+  
+}
+.btn_lider:hover{
+    border:none;
+    width:60%;
+    height:50px;
+    background-color:rgba(19, 16, 5, 0.9);
+    margin-left:20px;
+    color:rgb(255, 255, 255);
+
+
+  
 }
 .btn_k:hover{
     border:none;
