--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ footer{
 }
 .bigBg{
     width:100%;
-    height:550px;
+    height:650px;
     background-image:url('images/b-g.jpg');
     background-size:100% 100%;
     background-attachment:fixe;
@@ -346,8 +346,8 @@ footer{
 
    
 section.clearfix{
-   background-color:rgb(244, 248, 244);
-   color:#333;
+   background-color:#292929;
+   color:rgb(255, 255, 255);
    height:120px;
    
   }
@@ -356,7 +356,7 @@ section.clearfix{
   .clearfix:after {
     display:;
     line-height: 0;
-   content: "";
+   /*content: "";*/
   }
   .clearfix:after {
     clear: both;
@@ -470,14 +470,11 @@ section.clearfix{
   }
   .learn-more{
       display: table;
-      margin: 5px auto 0;
+   margin-top:7px;
       padding: 5px 10px;
-      cursor: pointer;
-      border-radius: 3px;
+    
+    
       
-      background: #080808;
-      color:white;
-      font-size: 17px;
   }
   .learn-more:hover{
       background: #6d5408;
