--- a/style.css
+++ b/style.css
@@ -315,6 +315,26 @@ footer{
     background-color:rgba(255, 255, 255, 0.4);
   
 }
+.btn_liderR{
+    border:1px solid #333;
+    width:60%;
+    height:50px;
+    background-color:rgba(255, 255, 255, 0.884);
+    margin-left:20px;
+    color:black;
+  
+}
+.btn_liderR:hover{
+    border:none;
+    width:60%;
+    height:50px;
+    background-color:rgba(19, 16, 5, 0.9);
+    margin-left:20px;
+    color:rgb(255, 255, 255);
+
+
+  
+}
 .btn_lider{
     border:none;
     width:60%;
@@ -849,15 +869,14 @@ height: 100%;
 
 
 
-.ara02{
-    width:100%;
-    height:300px;
-    background-image:url('images/b0011.jpg');
-    background-position: bottom;
-    background:cover;
+.ara02 {
+    width: 100%;
+    height: 650px;
+    background-image: url(images/afc.jpg);
+    background-position:bottom;
+    background: cover;
     background-size: auto;
-   
-    
+    background-attachment: fixed;
 }
 
 
@@ -871,7 +890,14 @@ height: 100%;
     
 }
 
-
+.succes_african{
+    width:95%;
+    margin:5px;
+    padding:4px;
+    font-size:16px;
+    font-family: sans-serif;
+    position: relative;
+}
 
 
 
@@ -900,6 +926,6 @@ height: 100%;
       height: 500px;
       width: 100%;
      background-attachment: fixed;
-
+margin-top:-30px;
       background-image: url('images/faded_africa.png');
   }
