--- a/style.css
+++ b/style.css
@@ -989,6 +989,32 @@ height: 100%;
     background-position:center;
     
 }
+.ara3{
+    width:100%;
+    height:400px;
+    background-image:url('images/tech02.jpg');
+    background-size: auto;
+    background-position:cover;
+    
+}
+
+.ara4{
+    width:100%;
+    height:400px;
+    background-image:url('images/b00.jpg');
+    background-size: auto;
+    background-position: cover;
+    
+}
+.ara5{
+    width:100%;
+    height:400px;
+    background-image:url('images/tech1 (1).jpg');
+    background-size: 100% 100%;
+    background-position:cover;
+    
+}
+
 
 .succes_african{
     width:95%;
@@ -997,6 +1023,10 @@ height: 100%;
     font-size:16px;
     font-family: sans-serif;
     position: relative;
+}
+.ModernAfrica{
+    width:96%;
+    margin:0 auto;
 }
 
 
@@ -1022,13 +1052,17 @@ height: 100%;
       
   }
 
+
   .separator_line{
       height: 500px;
       width: 100%;
      background-attachment: fixed;
 margin-top:-30px;
       background-image: url('images/faded_africa.png');
+      position:right;
   }
+
+  
 
 .topRow{
     width:100%;
@@ -1041,4 +1075,7 @@ margin-top:-30px;
     height:40px;
     background-color:#979b60;
     
+}
+.gelisme{
+    background-color:rgb(247, 247, 247);
 }
